--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "My Todo List",
+  "name": "my-todo-list",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vlmakh.github.io/my-todo-list-react/",
