--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "https://vlmakh.github.io/my-todo-list-react/",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
