--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-todo-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vlmakh.github.io/my-todo-list-react/",
+  "homepage": "https://thunderous-dodol-52f7aa.netlify.app/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
