--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "styled-system": "^5.1.5",
