--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.6.4",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
