--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
+    "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
