--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "framer-motion": "^7.6.4",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
