--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "styled-system": "^5.1.5",
