--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-todo-list",
+  "name": "my-notes",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://thunderous-dodol-52f7aa.netlify.app/",
