--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.4",
     "nanoid": "^4.0.0",
     "react": "^18.1.0",
     "react-animations": "^1.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "styled-system": "^5.1.5",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
