--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
