--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-system": "^5.1.5",
+    "theme-ui": "^0.15.5",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
