--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
           npm install
           npm run lint:js
           npm run build
+        env:
+          REACT_APP_MAIN_URL: ${{ secrets.REACT_APP_MAIN_URL }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
